# binary_io

./: CMakeLists.txt  CMakePresets.json  README.md  annotated.html  any__stream_8hpp.html  binary__io_8hpp.html  binary_io.tagfile.xml  classbinary__io_1_1any__istream.html  classbinary__io_1_1any__ostream.html  classbinary__io_1_1basic__memory__istream.html  classbinary__io_1_1basic__memory__ostream.html  classbinary__io_1_1buffer__exhausted.html  classbinary__io_1_1components_1_1any__stream__base.html  classbinary__io_1_1components_1_1basic__format__stream.html  classbinary__io_1_1components_1_1basic__memory__stream__base.html  classbinary__io_1_1components_1_1basic__seek__stream.html  classbinary__io_1_1components_1_1file__stream__base.html  classbinary__io_1_1components_1_1span__stream__base.html  classbinary__io_1_1exception.html  classbinary__io_1_1file__istream.html  classbinary__io_1_1file__ostream.html  classbinary__io_1_1istream__interface.html  classbinary__io_1_1ostream__interface.html  classbinary__io_1_1span__istream.html  classbinary__io_1_1span__ostream.html  common_8hpp.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_ca2d5da47f84bd4b567d564c0507e902.html  file__stream_8hpp.html  files.html  index.html  index_8doxy.html  memory__stream_8hpp.html  modules.html  namespacebinary__io.html  namespacebinary__io_1_1components.html  namespacebinary__io_1_1concepts.html  namespacebinary__io_1_1endian.html  namespaces.html  pages.html  (+10 more)
.github/workflows/: deploy_docs.yml  formatting.yml  main_ci.yml
docs/: index.doxy  poxy.toml.in
docs/images/: banner_small.psd
include/binary_io/: any_stream.hpp  binary_io.hpp  common.hpp  file_stream.hpp  memory_stream.hpp  span_stream.hpp
src/: CMakeLists.txt
src/binary_io/: binary_io.cpp
tests/: CMakeLists.txt
tests/binary_io/: binary_io.test.cpp
